--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 3000",
+    "test": "vitest run"
   },
   "dependencies": {
     "next": "14.1.0",
@@ -22,6 +22,10 @@
     "postcss": "8.4.31",
     "autoprefixer": "10.4.16",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "vitest": "^1.6.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "jsdom": "^24.0.0"
   }
 }
